# CURE

./: .gitignore  CMakeLists.txt  README.md  paper_final.md  user_rfm_3a.csv  user_rfm_dunnhumby.csv  user_rfm_or2.csv
examples/: CMakeLists.txt  benchmark.cpp  kdtree_example.cpp  main.cpp
include/cure/common/: types.hpp
include/cure/cure/: cluster.hpp  cure.hpp  distance.hpp  kd_tree.hpp
python_code/: cure.py  cure_test_2d.py  cure_test_3d.py  euclidean_cure.py  kd_tree.py  new_cure.py  pearson_cure.py
scripts/: clean.sh
src/: CMakeLists.txt
src/cure/: cluster.cpp  cure.cpp  cure_mapreduce.cpp  distance.cpp  kd_tree.cpp
tests/: CMakeLists.txt  test_cure.cpp  test_distance.cpp  test_kdtree.cpp
tests/comparison/: README.md  generate_all_variants.py  generate_challenging_tests.py  generate_test_data.py  plot_comparison.py  run_all_comparisons.sh  run_comparison.sh  test_comparison.cpp
tests/cpp_vs_true/: README.md  generate_test_data.py  plot_cpp_vs_true.py  run_cpp_vs_true.sh  test_cpp_vs_true.cpp
